--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -165,6 +165,7 @@ input::placeholder {
     font-weight: normal;
 }
 
+a.button,
 button[type="submit"] {
     padding: 8px 32px;
     background-color: var(--primary-color);
@@ -175,4 +176,11 @@ button[type="submit"] {
     font-size: 16px;
     cursor: pointer;
     border-color: unset;
+}
+
+a.button {
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
 }
