--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -3,7 +3,10 @@
 {% block content %}
 
 <div class="card">
-    <section class="avatar"></section>
+    <section 
+        class="avatar"
+        style="background-image: url('https://source.unsplash.com/collection/3465564/500x500');"
+    ></section>
     <section class="details">
 
         <h3>Detalhes</h3>
