--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -6,10 +6,10 @@
     <section class="avatar"></section>
     <section class="details">
 
-        <h3>Novo instrutor</h3>
+        <h3>Editar instrutor</h3>
 
         {% include 'instructors/fields.njk' %}
-        
+
     </section>
 </form>
 {% endblock content %}
