--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -3,7 +3,11 @@
 {% block content %}
 
 <form class="card" method="POST" action="/instructors">
-    <section class="avatar"></section>
+    <section 
+        class="avatar"
+        style="background-image: url({{instructor.avatar_url}});"    
+    >
+    </section>
     <section class="details">
 
         <h3>Editar instrutor</h3>
