--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/instructors">
+<form class="card" method="POST" action="/instructors?_method=PUT">
     <section 
         class="avatar"
         style="background-image: url({{instructor.avatar_url}});"    
@@ -13,6 +13,11 @@
         <h3>Editar instrutor</h3>
 
         {% include 'instructors/fields.njk' %}
+
+        <input 
+            type="hidden"
+            name="id"
+            value={{instructor.id}}>
 
     </section>
 </form>
