--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -2,23 +2,36 @@
 
 {% block content %}
 
-<form class="card" method="POST" action="/instructors?_method=PUT">
+<div class="card">
     <section 
         class="avatar"
         style="background-image: url({{instructor.avatar_url}});"    
     >
     </section>
+
     <section class="details">
+        <form method="POST" action="/instructors?_method=PUT">
+                <h3>Editar instrutor</h3>
 
-        <h3>Editar instrutor</h3>
+                {% include 'instructors/fields.njk' %}
 
-        {% include 'instructors/fields.njk' %}
+                <input 
+                    type="hidden"
+                    name="id"
+                    value={{instructor.id}}>
+        </form>
 
-        <input 
-            type="hidden"
-            name="id"
-            value={{instructor.id}}>
-
+        <form id="form-delete" action="/instructors?_method=DELETE" method="POST">
+            <input 
+                type="hidden"
+                name="id"
+                value={{instructor.id}}>
+            <button type="submit">Deletar</button>
+        </form>
     </section>
-</form>
+
+</div>
+
+
+
 {% endblock content %}
