--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -3,41 +3,25 @@
 {% block content %}
 
 <div class="card">
-    <section 
-        class="avatar"
-        style="background-image: url('https://source.unsplash.com/collection/3465564/500x500');"
-    ></section>
-    <section class="details">
+    <table>
+        <thead>
+            <tr>
+                <th>Instructor</th>
+                <th>Atendimento</th>
+            </tr>
+        </thead>
 
-        <h3>Detalhes</h3>
-
-        <div class="item">
-            <div>Instrutor</div>
-            <div>Guiherme Oliveira</div>
-        </div>
-
-        <div class="item">
-            <div>Idade</div>
-            <div>29</div>
-        </div>
-
-        <div class="item">
-            <div>Sexo</div>
-            <div>Maculino</div>
-        </div>
-
-        <div class="item">
-            <div>Acompanhamento</div>
-            <div>
-                <span>Musculação</span>
-                <span>Crossfit</span>
-            </div>
-        </div>
-
-        <div class="item">
-            <div>Desde</div>
-            <div>01/01/2019</div>
-        </div>
-    </section>
+        <tbody>
+            {% for instructor in instructors %}
+                <tr>
+                    <td>{{instructor.name}}</td>
+                    <td>{{instructor.services}}</td>
+                </tr>
+            {% endfor %}
+            
+        </tbody>
+    </table>
 </div>
+
+
 {% endblock content %}
