--- a/views/instructors/index.njk
+++ b/views/instructors/index.njk
@@ -2,20 +2,26 @@
 
 {% block content %}
 
-<div class="card">
+<div class="card table-container">
     <table>
         <thead>
             <tr>
                 <th>Instructor</th>
                 <th>Atendimento</th>
+                <th>Ação</th>
             </tr>
         </thead>
 
         <tbody>
             {% for instructor in instructors %}
                 <tr>
-                    <td>{{instructor.name}}</td>
+                    <td>
+                        <span style="background-image: url({{instructor.avatar_url}})">
+                        </span>
+                        {{instructor.name}}
+                    </td>
                     <td>{{instructor.services}}</td>
+                    <td><a href="/instructors/{{instructor.id}}">ver</a></td>
                 </tr>
             {% endfor %}
             
