--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -239,7 +239,8 @@ tbody tr td:first-child span {
     border: 2px solid white;
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
     text-decoration: none;
     background-color: var(--primary-color);
     padding: 8px 16px;
@@ -247,6 +248,11 @@ tbody tr td:last-child a {
     text-transform: uppercase;
     font-size: 12px;
     border-radius: 4px;
+}
+
+.table-container > a {
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .table-container thead tr th:last-child,
