--- a/views/members/index.njk
+++ b/views/members/index.njk
@@ -3,10 +3,12 @@
 {% block content %}
 
 <div class="card table-container">
+    <a href="/members/create">Novo</a>
+
     <table>
         <thead>
             <tr>
-                <th>Instructor</th>
+                <th>Membros</th>
                 <th>Atendimento</th>
                 <th>Ação</th>
             </tr>
