--- a/views/members/edit.njk
+++ b/views/members/edit.njk
@@ -5,27 +5,27 @@
 <div class="card">
     <section 
         class="avatar"
-        style="background-image: url({{instructor.avatar_url}});"    
+        style="background-image: url({{member.avatar_url}});"    
     >
     </section>
 
     <section class="details">
-        <form method="POST" action="/instructors?_method=PUT">
-                <h3>Editar instrutor</h3>
+        <form method="POST" action="/members?_method=PUT">
+                <h3>Editar membro</h3>
 
-                {% include 'instructors/fields.njk' %}
+                {% include 'members/fields.njk' %}
 
                 <input 
                     type="hidden"
                     name="id"
-                    value={{instructor.id}}>
+                    value={{member.id}}>
         </form>
 
-        <form id="form-delete" action="/instructors?_method=DELETE" method="POST">
+        <form id="form-delete" action="/members?_method=DELETE" method="POST">
             <input 
                 type="hidden"
                 name="id"
-                value={{instructor.id}}>
+                value={{member.id}}>
             <button type="submit">Deletar</button>
         </form>
     </section>
