--- a/views/members/edit.njk
+++ b/views/members/edit.njk
@@ -29,9 +29,8 @@
             <button type="submit">Deletar</button>
         </form>
     </section>
-
 </div>
-
+<script src="/script.js"></script>   
 
 
 {% endblock content %}
