--- a/views/members/index.njk
+++ b/views/members/index.njk
@@ -9,21 +9,25 @@
         <thead>
             <tr>
                 <th>Membros</th>
-                <th>Atendimento</th>
+                <th>E-mail</th>
+                <th>Altura</th>
+                <th>Peso</th>
                 <th>Ação</th>
             </tr>
         </thead>
 
         <tbody>
-            {% for instructor in instructors %}
+            {% for member in members %}
                 <tr>
                     <td>
-                        <span style="background-image: url({{instructor.avatar_url}})">
+                        <span style="background-image: url({{member.avatar_url}})">
                         </span>
-                        {{instructor.name}}
+                        {{member.name}}
                     </td>
-                    <td>{{instructor.services}}</td>
-                    <td><a href="/instructors/{{instructor.id}}">ver</a></td>
+                    <td>{{member.email}}</td>
+                    <td>{{member.height}}cm</td>
+                    <td>{{member.weight}}kg</td>
+                    <td><a href="/members/{{member.id}}">ver</a></td>
                 </tr>
             {% endfor %}
             
